fix: add padding for content on small width viewports

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -101,6 +101,7 @@ https://evanminto.com/blog/intrinsically-responsive-css-grid-minmax-min/
 
 main {
     font-family: RobotoSlab, Arial, Helvetica, sans-serif;
+    padding-inline: 1rem;
 }
 
 main header h1 {
